--- a/packages/mermaidtui/package.json
+++ b/packages/mermaidtui/package.json
@@ -1,13 +1,21 @@
 {
   "name": "mermaidtui",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Deterministic ASCII and Unicode Mermaid diagram renderer for the terminal",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
+  "bin": {
+    "mermaidtui": "./dist/cli/index.js"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "build": "tsc",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "prepublishOnly": "npm run build"
   },
   "type": "module",
   "keywords": [],
@@ -16,11 +24,13 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.10",
-    "commander": "^14.0.2",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "commander": "^14.0.2"
   }
 }
