--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mermaidtui",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Deterministic Unicode and ASCII Mermaid diagram renderer for the terminal",
   "main": "./dist/src/index.js",
   "module": "./dist/src/index.js",
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "tsc",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "dump-visual-test": "tsx test/visual_verify.ts",
     "prepublishOnly": "npm run build"
   },
   "type": "module",
